[Refactoring] statistic package